feat: implement list posts endpoint
