# packages/monolith-sample/server/src/modules/posts/repositories/IPostsRepository.ts
@@ -2,7 +2,17 @@ import type { Insertable } from "kysely";
 import type { PostsTable } from "../../../database/types";
 import type { Post } from "../entities/Post";
 
+export interface ListPost {
+	id: string;
+	text: string;
+	createdAt: Date;
+	authorName: string;
+	likesCount: number;
+	likedByUser: boolean;
+}
+
 export interface IPostsRepository {
+	list(currentUserId: string): Promise<ListPost[]>;
 	findById(id: string): Promise<Post | null>;
 	create(postData: Insertable<PostsTable>): Promise<Post>;
 	delete(id: string, createdBy: string): Promise<boolean>;
